# pharma_hyperlink

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_FLOW.md  DEMO-NARRATIVE.md  DOSSIER_ENHANCEMENTS.md  FEATURE_VERIFICATION.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  POWERSHELL-COMMANDS.md  QUICK-START.md  README.md  RUN-GUIDE-30-DOCS.md  STRUCTURE.md  build_graph.py  complete_guide.md  docker-compose.yml  pharma-hyperlink-technical-design.md  pyproject.toml  test_e2e.ps1
backend/: .env.example  pyproject.toml
backend/config/: spacy_ner.cfg
backend/data/: deprecated_ids.yaml
backend/data/Internal Dossier/: Afatinib CSR 1 - convert to pdf.docx
backend/data/New set of Afatinib/: Clinical Summary Afatinib.docx  ISE.docx  ISS.docx  Protocol Afatinib.docx  SAP.docx
backend/data/training/: refs.dev.jsonl  refs.manifest.json  refs.train.jsonl
backend/scripts/: benchmark.py  benchmark_throughput.py  bootstrap_synthetic_data.py  diag_anchor_coverage_all.py  diag_anchor_fallback.py  diag_anchor_fallback_docx.py  eval_references.py  generate_csr_dossier.py  generate_csr_dossier_large.py  generate_demo_dossier.py  generate_ner_dossier.py  label_references.py  migrate_graph_v2.py  phase1_acceptance.py  phase2_acceptance.py  phase3_acceptance.py  push_results_to_dashboard.py  train_ner.py
backend/scripts/eval_data/: references_gold.json
backend/src/hyperlink_engine/: __init__.py  cli.py  models.py
backend/tests/: conftest.py  test_frontend_backend_sync.py
backend/tests/integration/: test_agent_registry.py  test_run_document_preview.py
backend/tests/unit/: test_audit_trail.py  test_benchmark.py
data/: CSR.docx  Clinical Summary.docx  ISE.docx  ISS.docx  Protocol.docx  SAP.docx
docs/: 30-DOC-EXTENDED-TEST-SET.md  POC-revised-path-analysis.md  ROADMAP-generalize-without-regex-churn.md  architecture.md  auth-supertokens.md  captis-integration.md  gxp-compliance.md  hyperlink-automation-architecture.drawio  langsmith-dev.md  neo4j-schema-options.md  pattern-catalog.md  plan-two.md  regional-variants.md  sizing.md  viewer-compatibility.md
docs/adr/: 0001-docx-hyperlink-approach.md  0002-dossplorer-integration.md
docs/architecture/: HLD_Architecture_TechStack - Copy.pptx  HLD_Architecture_TechStack_v2.pptx  Hyperlink_Engine_Architecture.pptx  build_arch.js  build_hld.js
docs/knowledge/: Auth and compliance.md  Detection cascade.md  Ingestion layer.md  Injection layer.md  Key files.md  Orchestration and agents.md  Parsing layer.md  Pipeline run and live status.md  Reporting and scoring.md  Reports and review screens.md  Resolution and anchoring.md  Run Compare and link navigation.md  Running the app.md  Validation layer.md  Workers and queue.md  _Home.md  eCTD backbone and graph.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  refMatch.ts  types.ts
frontend/src/components/: BeforeAfter.tsx  RunSelector.tsx
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.conf
infra/redis/: redis.conf
scripts/: benchmark.py  benchmark_throughput.py  bootstrap_synthetic_data.py  generate_demo_dossier.py  label_references.py  phase1_acceptance.py  phase2_acceptance.py  phase3_acceptance.py  push_results_to_dashboard.py
src/hyperlink_engine/: cli.py  models.py
tests/: test_frontend_backend_sync.py
tests/unit/: test_anomaly_detector.py  test_audit_trail.py  test_backbone_graph.py  test_cross_module_integrity.py  test_cross_module_links.py  test_csv_exporter.py  test_dashboard_api.py  test_docx_linker.py  test_docx_loader.py  test_docx_parser.py  test_dossplorer_client.py  test_dossplorer_live.py  test_ectd_backbone_writer.py  test_ectd_loader.py  test_ectd_loader_phase2.py  test_ectd_xref.py  test_entity_extractor.py  test_existence_checker.py  test_gate_review_pdf.py  test_ha_rule_engine.py  test_leaf_resolver.py  test_llm_disambiguator.py  test_neo4j_adapter.py  test_ner_model.py  test_pdf_linker.py  test_pdf_loader.py  test_pdf_parser.py  test_pipeline_batch_runner.py  test_pipeline_cache.py  test_pipeline_celery_app.py  test_pipeline_tasks.py  test_readiness_score.py  test_regex_patterns.py  test_sequence_history.py  test_style_preserver.py  test_target_validator.py  test_viewer_compat.py  test_xlsx_exporter.py
(+226 files in other folders)
